--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,30 @@
-/* YeyeYeee código aquí */
+.col-12{
+  text-align: center;
+  background-color: #404242;
+  width: 100%;
+  height: 100%;
+  padding: 5%;
+}
+.col-10{
+  text-align: center;
+  background-color: #404242;
+  width: 100%;
+  height: 100%;
+  padding: 5%;
+}
+
+button{
+  background-color: #FFA200;
+}
+
+#logo{
+  text-align: center;
+  width: 25%;
+}
+
+.inputs{
+  text-align: center;
+  border-radius: 0%;
+  border: none;
+  width: 100%;
+}
