--- a/css/style.css
+++ b/css/style.css
@@ -1,59 +1,4 @@
-.col-12{
+.navbar{
   text-align: center;
   background-color: #404242;
-  width: 100%;
-  height: 100%;
-  padding: 5%;
-}
-.col-10{
-  text-align: center;
-  background-color: #404242;
-  width: 100%;
-  height: 100%;
-  padding: 5%;
-}
-
-button{
-  background-color: #FFA200;
-  border-radius: 0%;
-  border: none;
-  color: #404242;
-  width: 100%;
-}
-
-#logo{
-  text-align: center;
-  width: 25%;
-  position: relative;
-  top: 10px;
-  bottom: 10px;
-}
-#title{
-  color:#FFA200;
-  font-family: Helvetica;
-  font-size: 150%;
-  
-}
-
-.inputs{
-  text-align: center;
-  border-radius: 0%;
-  border: none;
-  width: 100%;
-}
-#forgotPass{
-  color: #ffffff;
-  font-size: 90%;
-  display: inline-block;
-  position: relative;
-  top: 20px;
-}
-
-p{
-  color: #ffffff;
-  display: inline;
-}
-#registrate{
-  color:#FFA200;
-  display: inline;
 }
