actualización, se agregan paginas saldo

--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,10 @@ input{
   width: 60%;
 }
 
+.espacio{
+  padding: 3%;
+}
+
 .dtsIngresados{
   color: #333333;
   font-family: Helvetica;
@@ -140,4 +144,8 @@ input{
 #accordion{
   text-align: center;
   width: 100%;
+}
+
+#selectCard{
+  width: 50%;
 }
